--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -295,3 +295,17 @@ c）系统显示“导入接口文档快速创建接口”页面，如图2-35所
 ![2-35](https://www.feisuanyz.com/fsimage/zc-image/czzn_16_2_4_3.png)
 
 ##### 图2-35 导入接口文档快速创建接口页面
+
+d）选择并上传swagger格式的接口文档，单击“导入”，如图2-36所示：
+
+![2-36](https://www.feisuanyz.com/fsimage/zc-image/czzn_16_2_4_4.png)
+
+##### 图2-36 上传swagger格式的接口文档
+
+##### 注意：在上传文件时，请注意页面黄色区域的“导入提示”。
+
+e）稍等片刻，您可以看到接口列表下新增了很多接口模块，如图2-37所示：
+
+![2-37](https://www.feisuanyz.com/fsimage/zc-image/czzn_16_2_4_5.png)
+
+##### 图2-37 导入成功
