--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -319,3 +319,13 @@ ebSocket协议是一种在单个TCP连接上进行全双工通信的协议，它
 #### 注意：若不对客户端通信组件的客户端编号进行选择（即设置为空），便可以实现群发消息，服务器会将所有响应的信息群发给建立关系的客户端。
  
 ##### 2.5.1 结果展示
+
+a）实例主要是通过服务端主动向客户端推送计数变量值，实现一个倒计时的效果，如图2-38所示：
+
+![2-38](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_8.png)
+
+##### 图2-38 实现倒计时
+
+##### 注意：本案例的实现需要和前端进行联调，具体可参见前端调测-项目接口与前端在线联调。
+
+##### 2.5.2 流程图展示
