--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -343,3 +343,15 @@ a）为项目添加客户端通信组件加载项，如图2-40所示：
 ![2-40](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_1.png)
 
 ##### 图2-40 添加加载项
+
+b）新增一个接口，接口协议选择WebSocket，如图2-41所示：
+
+![2-41](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_2.png)
+
+##### 图2-41 新增接口
+
+c）配置接口的入口参数，本实例需要添加计数变量a，如图2-42所示：
+
+![2-42](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_9.png)
+
+##### 图2-42 配置入口参数
