--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -355,3 +355,17 @@ c）配置接口的入口参数，本实例需要添加计数变量a，如图2-4
 ![2-42](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_9.png)
 
 ##### 图2-42 配置入口参数
+
+d）通过拖、拽、拉的方式进行模型编辑（即流程图编辑），需注意关键的组件客户端通信组件，如图2-43所示：
+
+![2-43](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_10.png)
+
+##### 图2-43 进行模型编辑
+
+e）接下来将对组件的具体配置进行展示。
+
+##### e1）计数器组件【录入计数变量、实现逐次递减】：用于引用计数变量，并实现计数变量的逐次递减。计数器组件的循环流程变量选择入口参数计数变量a，操作符选择递减，如图2-44、图2-45、图2-46所示：
+
+![2-44](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_11.png)
+
+##### 图2-44
