--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -369,3 +369,21 @@ e）接下来将对组件的具体配置进行展示。
 ![2-44](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_11.png)
 
 ##### 图2-44
+
+![2-45](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_13.png)
+
+##### 图2-45
+
+![2-46](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_14.png)
+
+##### 图2-46
+
+##### e2）互斥条件组件【判断计数变量是否大于0】：用于判断计数变量的值是否大于0，若大于0，则通过客户端通信组件主动推送计数变量的值，若小于等于0，则结束程序，两条顺序流的流转条件的设置图2-47、图2-48、图2-49、图2-50、图2-51、图2-52、图2-53、图2-54所示：
+
+![2-47](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_15.png)
+
+##### 图2-47
+
+![2-48](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_16.png)
+
+##### 图2-48
