--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -387,3 +387,25 @@ e）接下来将对组件的具体配置进行展示。
 ![2-48](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_16.png)
 
 ##### 图2-48
+
+![2-49](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_17.png)
+
+##### 图2-49
+
+![2-50](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_18.png)
+
+##### 图2-50
+
+![2-51](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_26.png)
+
+##### 图2-51
+
+![2-52](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_27.png)
+
+##### 图2-52
+
+##### e3）输出结果组件：用于到计数变量的值小于等于0时，结束程序，将最终结果输出。
+
+![2-53](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_28.png)
+
+##### 图2-53
