--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -409,3 +409,17 @@ e）接下来将对组件的具体配置进行展示。
 ![2-53](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_28.png)
 
 ##### 图2-53
+
+![2-54](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_29.png)
+
+##### 图2-54
+
+##### e4）单函数组件【休眠：制造等待时间】：用于程序在进行倒计时时，制造倒计时的间隔时间，用到的函数是休眠函数sleep(long arg0)，需传入休眠时间，具体配置如图2-55、图2-56所示：
+
+![2-55](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_19.png)
+
+##### 图2-55
+
+![2-56](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_20.png)
+
+##### 图2-56
