--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -423,3 +423,21 @@ e）接下来将对组件的具体配置进行展示。
 ![2-56](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_20.png)
 
 ##### 图2-56
+
+##### e5）客户端通信组件【建立连接、主动推送数据】：用于与websocket服务端建立连接，并主动推送计数器变量的数据给客户端。客户端通信组件的具体配置如下图所示，若此处不对客户端编号进行设置，便可以实现消息群发，如图2-57、图2-58、图2-59、图2-60、图2-61所示：
+
+![2-57](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_21.png)
+
+##### 图2-57
+
+![2-58](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_22.png)
+
+##### 图2-58
+
+![2-59](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_23.png)
+
+##### 图2-59
+
+![2-60](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_24.png)
+
+##### 图2-60
