--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -441,3 +441,17 @@ e）接下来将对组件的具体配置进行展示。
 ![2-60](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_24.png)
 
 ##### 图2-60
+
+![2-61](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_25.png)
+
+##### 图2-61
+
+f）完成流程图编辑之后，保存并退出。
+
+g）提交并发布接口。
+
+h）编辑测试用例，录入计数变量的值，如图2-62所示：
+
+![2-62](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_25.png)
+
+##### 图2-62
