--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -455,3 +455,19 @@ h）编辑测试用例，录入计数变量的值，如图2-62所示：
 ![2-62](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_25.png)
 
 ##### 图2-62
+
+i）执行测试用例，查看测试用例的结果，可以看到响应内容为计数变量的值，如图2-63所示：
+
+![2-63](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_32.png)
+
+##### 图2-63 查看结果
+
+j）与前端做好联调后，启动前端程序，查看效果，如图2-64所示：
+
+![2-64](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_8.png)
+
+##### 图2-64 查看效果1
+
+![2-65](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_30.png)
+
+##### 图2-65 查看效果2
