--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -471,3 +471,21 @@ j）与前端做好联调后，启动前端程序，查看效果，如图2-64所
 ![2-65](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_30.png)
 
 ##### 图2-65 查看效果2
+
+#### 2.6 导入导出接口
+
+系统提供该功能，用户可以在同项目或者不同项目之间导入导出接口。本节将介绍导入导出接口的具体操作过程。
+
+##### 2.6.1 导入接口
+
+a）进入平台功能模块界面，选择接口管理，进入接口管理页面，如图2-66所示：
+
+![2-66](https://www.feisuanyz.com/fsimage/zc-image/jkgl/export_0.png)
+
+##### 图2-66 选择接口管理
+
+b）单击“新增接口模块”旁的三个点按钮，选择“导入接口”，如图2-67所示：
+
+![2-67](https://www.feisuanyz.com/fsimage/zc-image/jkgl/export_3.png)
+
+##### 图2-67 选择导入接口
