--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -527,3 +527,20 @@ c）单击“确定”，系统提示导出成功。
 #### 2.7 获取接口异常数据快照
 
 项目部署完成后，当某个接口执行异常时，用户可以通过系统提供的API接口去获取接口异常时整个流程数据的数据快照，便于开发者定位问题。本节将为您介绍获取接口异常数据快照的具体操作过程。
+
+#### 说明：
+
+API接口：http://ip:端口/flowexceptionlog/{projectId}/exception/interfaceId/{ interfaceId}
+
+ip：启动本地执行引擎的服务器地址；
+
+端口：启动本地执行引擎的服务器端口，默认为8080；
+
+{projectId}：对应项目的ID，使用时需去掉“{}”符号，可在项目页面地址栏找到；
+
+{interfaceId}：表示对应的接口ID，使用时需去掉“{}”符号，可在接口的流程图编辑页面地址栏找到。
+
+#### 前提条件
+
+您需要做好项目部署前的准备工作，具体可参见文档操作指南[《第8章 项目管理：1.15 项目部署》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86.md#115-%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2)。
+
