--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -544,3 +544,22 @@ ip：启动本地执行引擎的服务器地址；
 
 您需要做好项目部署前的准备工作，具体可参见文档操作指南[《第8章 项目管理：1.15 项目部署》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86.md#115-%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2)。
 
+##### 2.7.1 操作步骤
+
+a）进入本地执行引擎的解压路径，找到application.yml文件，添加如下记录流程异常日志信息，若没有找到则手动创建application.yml文件即可，如图2-72、2-73所示：
+
+
+```
+# 记录流程异常日志
+exception:
+    log:
+        enable: true
+```
+
+![2-72](https://www.feisuanyz.com/fsimage/zc-image/jkgl/api_1.png)
+
+##### 图2-72 本地执行引擎的解压路径
+
+![2-73](https://www.feisuanyz.com/fsimage/zc-image/jkgl/api_1_2.png)
+
+##### 图2-73 application.yml文件添加内容
