--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/2. 接口.md
@@ -563,3 +563,21 @@ exception:
 ![2-73](https://www.feisuanyz.com/fsimage/zc-image/jkgl/api_1_2.png)
 
 ##### 图2-73 application.yml文件添加内容
+
+b）保存application.yml文件后，双击` startup.bat `启动项目部署服务，如图2-74所示：
+
+![2-74](https://www.feisuanyz.com/fsimage/zc-image/jkgl/api_2.png)
+
+##### 图2-74 本地执行引擎的解压路径
+
+c）在浏览器地址栏中输入项目中异常接口的请求路径，回车执行，出现接口异常，如图2-75所示：
+
+![2-75](https://www.feisuanyz.com/fsimage/zc-image/jkgl/api_3_2.png)
+
+##### 图2-75 执行异常接口
+
+##### 说明：异常接口的请求路径可在测试用例结果页面找到，但服务器地址和端口需要替换为当前启动本地执行引擎的服务器地址和端口，如图2-76所示：
+
+![2-76](https://www.feisuanyz.com/fsimage/zc-image/jkgl/api_7.png)
+
+##### 图2-76 测试用例结果页面
