--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
@@ -1,1 +1,19 @@
-test123
+### 3. 集成监控接口
+
+#### 3.1 设置接口的集成监控
+
+平台提供对接口进行指标上报、监控上报以及字段监控采集的功能。用户可以根据需求进行相关设置，并通过第三方运维集成平台对监控采集到的数据进行分析，其中采集到的数据包含接口请求总次数、响应时间及请求参数等。本节主要介绍如何设置接口的集成监控。
+
+##### 3.1.1 操作步骤
+
+a）新增一个接口，配置接口的基本信息，点击更多设置展开接口的其他设置，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/jkgl/jcjk_1.png)
+
+##### 图3-1 配置基本信息
+
+b）更多设置中包含业务标签、指标上报、监控上报等设置，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fsimage/zc-image/jkgl/jcjk_2.png)
+
+##### 图3-2 更多设置
