--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
@@ -99,3 +99,36 @@ metrics-report:
 b）启动本地客户端或者本地执行引擎项目，如图3-6所示：
 
 ![3-6](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_1.png)
+
+
+##### 图3-6 启动项目
+
+c）打开接口的监控开关及字段采集数据，如图3-7、图3-8所示：
+
+![3-7](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_2.png)
+
+##### 图3-7 打开监控
+
+![3-8](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_3.png)
+
+##### 图3-8 采集数据
+
+d）运行接口即可开启接口监控数据采集。
+
+e）通过工具（如示例工具xshell）连接上配置文件中的infludb数据库，查看数据库中监控到的接口信息，如图3-9所示：
+
+![3-9](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_4.png)
+
+##### 图3-9 查看接口信息
+
+f）输入命令influx连接，可以看到当前数据口连接的版本和地址，如图3-10所示：
+
+![3-10](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_5.png)
+
+##### 图3-10 查看版本和地址
+
+g）输入命令auth，登录数据库的账户密码（该账号密码需与application.yml配置文件中的数据库连接信息保持一致），如图3-11所示：
+
+![3-11](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_6.png)
+
+##### 图3-11 登陆数据库
