--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
@@ -132,3 +132,15 @@ g）输入命令auth，登录数据库的账户密码（该账号密码需与app
 ![3-11](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_6.png)
 
 ##### 图3-11 登陆数据库
+
+h）输入命令` show databases `，显示所有数据库信息，如图3-12所示：
+
+![3-12](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_7.png)
+
+##### 图3-12 显示数据库信息
+
+i）输入命令` use flowcore_influxdb_dev `，切换进入配置文件中配置的` flowcore_influxdb_dev `数据库，如图3-13所示：
+
+![3-13](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_8.png)
+
+##### 图3-13 进入数据库
