--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/15. 接口管理/3. 集成监控接口.md
@@ -156,3 +156,18 @@ j）输入命令` show measurements `，显示` flowcore_influxdb_dev `数据库
 ![3-15](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_10.png)
 
 ##### 图3-15 显示所有表
+
+
+```
+flowcore_server_request : 所有接口请求的信息
+flowcore_server_request_interfaceId：单个接口的监控采集字段信息
+flowcore_server_request_ interfaceId _total ：单个接口的所有请求信息
+```
+
+k）进入到全自动开发平台，双击打开对应接口，查看上方该接口的URL地址，将鼠标移动到地址的后面可以看到该接口的interfaceId，如图3-16所示：
+
+![3-16](https://www.feisuanyz.com/fsimage/zc-image/jkgl/influxdb_11.png)
+
+##### 图3-16 查看interfaceId
+
+l）输入命令` select * from flowcore_server_request `，即可查看到所有接口请求的信息，输入其他命令同理。
