--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
@@ -57,3 +57,15 @@ d）单击“确定”，选择“下一步”，添加入参的参数，如图1
 ![1-8](https://www.feisuanyz.com/fsimage/ks-image/ks_15-04_img.png)
 
 ##### 图1-8 添加入参参数
+
+e）单击“提交”，完成入参配置，选择“模型”进入模型配置页面，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/ks-image/ks_15-05_img.png)
+
+##### 图1-9 模型配置页面
+
+f）单击“进入模型编辑”，在窗体视图添加定时任务操作流程，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/ks-image/ks_15-06_img.png)
+
+##### 图1-10 添加操作流程
