--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
@@ -81,3 +81,15 @@ h）查看定时任务测试结果，如图1-12所示：
 ![1-12](https://www.feisuanyz.com/fsimage/ks-image/ks_15-08_img.png)
 
 ##### 图1-12 查看测试结果
+
+i）单击“响应结果”列显示的链接查看具体的结果信息，如图1-13所示：
+
+![1-13](https://www.feisuanyz.com/fsimage/ks-image/ks_15-09_img.png)
+
+##### 图1-13 查看具体结果信息
+
+j）单击“启动任务”，完成启动定时任务，如图1-14所示：
+
+![1-14](https://www.feisuanyz.com/fsimage/ks-image/ks_15-10_img.png)
+
+##### 图1-14 完成启动定时任务
