--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
@@ -93,3 +93,13 @@ j）单击“启动任务”，完成启动定时任务，如图1-14所示：
 ![1-14](https://www.feisuanyz.com/fsimage/ks-image/ks_15-10_img.png)
 
 ##### 图1-14 完成启动定时任务
+
+#### 1.3 复制、导入、导出定时任务
+
+系统提供该功能，用户可以在同项目中复制、或者在不同项目之间导入导出定时任务，以减少频繁添加公共的定时任务。
+
+##### 前提条件
+
+您需要拥有“定时任务”模块的权限。
+
+权限由系统管理员在“用户权限中心”系统中配置。
