--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
@@ -103,3 +103,15 @@ j）单击“启动任务”，完成启动定时任务，如图1-14所示：
 您需要拥有“定时任务”模块的权限。
 
 权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.3.1 操作步骤：复制定时任务
+
+a）进入“定时任务”模块，选中需复制的定时任务，单击旁边的三个点符号，或进入编辑定时任务页面，选择“复制定时任务”，如图1-15、图1-16所示：
+
+![1-15](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_1.png)
+
+##### 图1-15 定时任务列表
+
+![1-16](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_2.png)
+
+##### 图1-16 编辑定时任务页面
