--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
@@ -127,3 +127,17 @@ c）修改定时任务的名称，单击“提交”即可，如图1-18所示：
 ![1-18](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_4.png)
 
 ##### 图1-18 修改子流程名称
+
+d）复制后的定时任务会显示在列表中，如图1-19所示：
+
+![1-18](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_5.png)
+
+##### 图1-18 复制成功
+
+##### 1.3.2 操作步骤：导入定时任务
+
+a）进入“定时任务”模块，单击“新增定时任务”旁边的三个点按钮选择“导入定时任务”，如图1-19所示：
+
+![1-19](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_6.png)
+
+##### 图1-19 导入定时任务
