--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
@@ -151,3 +151,17 @@ b）系统显示导入定时任务页面，选择需上传的定时任务JSON文
 ##### 注意：若需导入的定时任务在系统中已存在时，您需要选择“覆盖原有定时任务”才可导入，原有定时任务将会自动删除。
 
 c）系统提示“导入定时任务成功”。
+
+##### 1.3.3 操作步骤：导出定时任务
+
+a）进入“定时任务”模块，单击“新增定时任务”旁边的三个点按钮选择“导出定时任务”，如图1-21所示：
+
+![1-21](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_8.png)
+
+##### 图1-21 选择导出定时任务
+
+b）系统显示导出定时任务页面，输入导出定时任务JSON文件的文件名（若未输入则自动生成），如图1-22所示：
+
+![1-22](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_9.png)
+
+##### 图1-22 导出定时任务页面
