--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/16. 定时任务/1. 定时任务.md
@@ -165,3 +165,13 @@ b）系统显示导出定时任务页面，输入导出定时任务JSON文件的
 ![1-22](https://www.feisuanyz.com/fsimage/zc-image/cz_17_2_9.png)
 
 ##### 图1-22 导出定时任务页面
+
+c）勾选需导出的定时任务，单击“确定”即可，需导出的定时任务JSON文件会在页面下方自动下载。
+
+#### 1.4 对定时任务进行集群部署
+
+定时任务支持集群部署，即支持部署在多台服务器上。每个定时任务只会在其中一台服务器上执行，若出现执行某一定时任务所在服务器故障的情况，其它正常的服务器则会继续执行该定时任务。本节主要介绍如何对定时任务进行集群部署。
+
+##### 1.4.1 操作步骤
+
+a）对定时任务进行集群部署与项目部署操作基本一致，项目部署操作详见[《第8章 项目管理：1.15 项目部署》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86.md#115-%E9%A1%B9%E7%9B%AE%E9%83%A8%E7%BD%B2)。
