--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
@@ -1,1 +1,13 @@
-test
+### 1. 第三方脚本
+
+#### 1.1 新增第三方脚本模块
+
+本节主要介绍如何在项目中新增第三方脚本模块的具体操作过程。
+
+##### 1.1.1 操作步骤
+
+a）进入全自动开发平台功能模块界面，选择“第三方脚本”功能模块，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/dsfjb/1.png)
+
+##### 图1-1 选择功能模块
