--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
@@ -59,3 +59,9 @@ c）在“脚本内容”空白处输入Python脚本语言，如图1-8所示：
 ![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_17-03_img.png)
 
 ##### 图1-8 输入Python脚本
+
+d）单击“提交”，系统显示新增成功。
+
+#### 1.3 新增Shell脚本
+
+本节主要介绍如何新增第三方Shell脚本的具体操作方法。
