--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
@@ -65,3 +65,11 @@ d）单击“提交”，系统显示新增成功。
 #### 1.3 新增Shell脚本
 
 本节主要介绍如何新增第三方Shell脚本的具体操作方法。
+
+##### 1.3.1 操作步骤
+
+a）进入项目第三方脚本功能模块页面，选中第三方脚本模块，单击添加按钮，选择“新增第三方脚本”，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/dsfjb/5.png)
+
+##### 图1-9 选择第三方脚本
