--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
@@ -93,3 +93,17 @@ c）在“脚本内容”空白处输入Shell脚本语言，如图1-12所示：
 ##### 图1-12 输入Shell脚本
 
 d）单击“提交”，系统显示新增成功。
+
+#### 1.4 复制、导入、导出第三方脚本
+
+系统提供该功能，用户可以在同项目中复制、或者在不同项目之间导入导出第三方脚本，以减少频繁添加公共的第三方脚本。
+
+##### 前提条件
+
+a）您需要拥有“第三方脚本”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.4.1 操作步骤：复制第三方脚本
+
+a）进入“第三方脚本”模块，选中需复制的第三方脚本，单击旁边的三个点符号，或进入编辑第三方脚本页面，选择“复制第三方脚本”，如图1-13、1-14所示：
