--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/17. 第三方脚本/1. 第三方脚本.md
@@ -107,3 +107,17 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 1.4.1 操作步骤：复制第三方脚本
 
 a）进入“第三方脚本”模块，选中需复制的第三方脚本，单击旁边的三个点符号，或进入编辑第三方脚本页面，选择“复制第三方脚本”，如图1-13、1-14所示：
+
+![1-13](https://www.feisuanyz.com/fsimage/zc-image/cz_18_3_1.png)
+
+##### 图1-13 第三方脚本列表
+
+![1-14](https://www.feisuanyz.com/fsimage/zc-image/cz_18_3_2.png)
+
+##### 图1-14 编辑第三方脚本页面
+
+b）系统弹出“是否确定复制第三方脚本”提示，单击“确定”，如图1-15所示：
+
+![1-15](https://www.feisuanyz.com/fsimage/zc-image/cz_18_3_3.png)
+
+##### 图1-15 弹出提示框
