--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/18. 接口文档/1. 接口文档.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/18. 接口文档/1. 接口文档.md
@@ -23,3 +23,15 @@ c）选择j接口模块下的接口，进入接口详情页面，如图1-3所示
 ![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_10-3_img.png)
 
 ##### 图1-3 接口详情页面
+
+d）选择调试”，进入接口调试页面，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/ks-image/ks_10-4_img.png)
+
+##### 图1-4 接口调测页面
+
+e）单击“发送”，调测接口结果如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/ks-image/ks_10-5_img.png)
+
+##### 图1-5 调测结果页面
