--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/18. 接口文档/1. 接口文档.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/18. 接口文档/1. 接口文档.md
@@ -35,3 +35,14 @@ e）单击“发送”，调测接口结果如图1-5所示：
 ![1-5](https://www.feisuanyz.com/fsimage/ks-image/ks_10-5_img.png)
 
 ##### 图1-5 调测结果页面
+
+
+#### 1.2 输出结果文档说明示例
+
+您可以在接口文档中查看当前接口的所有输出结果组件的信息，包含输出结果响应信息以及响应示例。
+
+##### 1.2.1 操作步骤
+
+a） 进入项目，单击“接口文档”，进入“接口文档”主页面，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_19_2_2.png)
