--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/18. 接口文档/1. 接口文档.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/18. 接口文档/1. 接口文档.md
@@ -46,3 +46,11 @@ e）单击“发送”，调测接口结果如图1-5所示：
 a） 进入项目，单击“接口文档”，进入“接口文档”主页面，如图1-6所示：
 
 ![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_19_2_2.png)
+
+##### 图1-6 进入接口文档页面
+
+b）选择对应接口，在页面右方即可看到输出结果组件的所有信息，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_19_2_1.png)
+
+##### 图1-7 输出结果组件信息
