--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/19. JAR包依赖图/1. JAR包依赖图.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/19. JAR包依赖图/1. JAR包依赖图.md
@@ -1,1 +1,15 @@
-test
+### 1. Jar包依赖图
+
+#### 1.1 Jar包依赖关系
+
+本节主要介绍如何通查看项目的根JAR包、项目JAR扩展包、项目公共JAR包依赖关系。
+
+##### 1.1.1 操作步骤
+
+a）选择已经创建项目的卡片，选择“Jar包依赖图”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_16-01_img.png)
+
+##### 图1-1 Jar包依赖图页面
+
+
