--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -1,1 +1,7 @@
-test
+### 1. 组件流程日志
+
+#### 1.1 配置本地组件流程日志
+
+通过本节，您可以在配置组管理activityLog配置日志存储的位置，然后在任意的流程节点组件中自定义配置需要记录的日志信息，在通过存储的日志位置去查看打印出的日志信息，方便定位问题。
+
+##### 1.1.1 操作步骤
