--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -5,3 +5,11 @@
 通过本节，您可以在配置组管理activityLog配置日志存储的位置，然后在任意的流程节点组件中自定义配置需要记录的日志信息，在通过存储的日志位置去查看打印出的日志信息，方便定位问题。
 
 ##### 1.1.1 操作步骤
+
+a）如图1-1所示。选择“配置组管理”，打开默认配置组` defaultGroup `页面，将` activityLog `配置项设置为
+
+`{"storageType":"file","filePath":"/data/logs/${项目路径}/activityLog.txt"}`
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_0001_img.png)
+
+##### 图1-1 配置组管理页面
