--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -13,3 +13,11 @@ a）如图1-1所示。选择“配置组管理”，打开默认配置组` defau
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_0001_img.png)
 
 ##### 图1-1 配置组管理页面
+
+##### 说明：
+
+a1）其中${项目路径}会被自动替换为当前项目的项目路径，同时您也可以自行设置该值，例如：若您将“filePath”设置为“/data/logs / ${项目编号}/ ${项目路径}/ ${项目名称}/ activityLog.txt”，其中的 ${项目名称}、 ${项目编号}也会被替换为当前项目的项目名称和项目编号。注意：当前的自行设置仅限于 ${项目名称}、 ${项目编号}、 ${项目路径}三个变量。
+
+a2）若配置项中的“storageType“，即存储类型，设置为除file、elasticsearch、mongodb、customized这四种类型以外的值时，系统将默认使用本地文件存储的方式来存储组件的流程日志，这时的文件路径就是{"storageType":"file","filePath":"/data/logs/ ${项目路径}/activityLog.txt"}。
+
+a3）若未找到activityLog配置项，您需要单击“同步”来显示。
