--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -21,3 +21,15 @@ a1）其中${项目路径}会被自动替换为当前项目的项目路径，同
 a2）若配置项中的“storageType“，即存储类型，设置为除file、elasticsearch、mongodb、customized这四种类型以外的值时，系统将默认使用本地文件存储的方式来存储组件的流程日志，这时的文件路径就是{"storageType":"file","filePath":"/data/logs/ ${项目路径}/activityLog.txt"}。
 
 a3）若未找到activityLog配置项，您需要单击“同步”来显示。
+
+b）开发环境配置完成后，单击“提交”。
+
+c）选择“接口管理”，新增一个接口。
+
+d）接着您就可以在流程图中自定义组件的流程日志了，通过生成的日志可以方便您定位开发中可能会出现的问题。
+
+e）选中您需要添加流程日志的组件，单击“流程日志”页签，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_0002_img.png)
+
+##### 图1-2 单击“流程日志”标签
