--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -44,3 +44,12 @@ g）录入日志内容，您也可以添加自定义信息。
 
 h）流程图绘制完成后，单击“保存并退出”，提交发布该接口。
 
+i）执行测试用例成功后，在配置组管理` activityLog `键中配置日志路径会自动生成` activityLog `日志文件。
+
+##### 说明：配置的activityLog文件只有下载项目部署包到自己服务器才生效，才可以查看日志文件，activityLog日志文件默认存到当前部署包目录下面。例如：部署包为feisuanyz-engine-3.0.12，则日志生成路径是feisuanyz-engine-3.0.12/data/logs/activityLog.txt
+
+#### 1.2 配置Elasticsearch或MongoDB组件流程日志
+
+通过本节，您可以了解到如何使用Elasticsearch或MongoDB存储器来存储组件流程日志，Elasticsearch和MongoDB存储器是平台默认可以实现的。
+
+##### 1.2.1 操作步骤
