--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -65,3 +65,15 @@ b）选择“资源”页签，您可以根据实际项目需要将“Elasticsea
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_0005_img.png)
 
 ##### 图1-5 选择资源标签
+
+c）选择“资源实例”模块，单击“Elasticsearch”或“MongoDB数据库”，单击“添加”新增资源实例，此处我们以Elasticsearch为例，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_0006_img.png)
+
+##### 图1-6 添加实例
+
+d）配置资源实例信息，配置完成后单击“提交”按钮，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_0007_img.png)
+
+##### 图1-7 配置资源实例信息
