--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -77,3 +77,21 @@ d）配置资源实例信息，配置完成后单击“提交”按钮，如图1
 ![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_0007_img.png)
 
 ##### 图1-7 配置资源实例信息
+
+e）接着选择“配置组管理”模块，打开默认配置组` defaultGroup `页面，将` activityLog `配置项设置为
+
+```
+{"storageType":"elasticsearch","resourceName":"资源实例名称","indexType":"log","indexName":"例如：activityLog"}
+```
+
+##### 说明：
+
+e1）若未找到activityLog配置项，您需要单击“同步”服务器activityLog配置项。
+
+e2）若您选择MongoDB存储器方式存储， 配置项填写格式为`{"storageType":"mongodb","resourceName":"资源实例名称","collectionName":"表名，例如：activityLog"}`
+
+如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_0011_img.png)
+
+##### 图1-8 配置组管理设置
