--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -95,3 +95,17 @@ e2）若您选择MongoDB存储器方式存储， 配置项填写格式为`{"stor
 ![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_0011_img.png)
 
 ##### 图1-8 配置组管理设置
+
+f）之后的步骤与本地文件存储器相同，您可以在自行配置的服务器地址获取` activityLog `日志文件。
+
+#### 1.3 配置自定义组件流程日志
+
+若本地文件存储器，Elasticsearch存储器和Mongo存储器无法满足您的要求，通过本节，您可以了解到如何自定义一个存储器。
+
+##### 1.3.1 操作步骤
+
+a）自定义存储器，即自定义一种新的插件，该插件需要实现ActivityLogStorage接口，然后打包上传至平台即可。
+
+b）准备好自定义插件的zip文件之后，选择“插件中心”，单击“导入”，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_0008_img.png)
