--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -109,3 +109,17 @@ a）自定义存储器，即自定义一种新的插件，该插件需要实现A
 b）准备好自定义插件的zip文件之后，选择“插件中心”，单击“导入”，如图1-9所示：
 
 ![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_0008_img.png)
+
+##### 图1-9 单击导入按钮
+
+c）将自定义插件的zip文件上传至平台，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_0009_img.png)
+
+##### 图1-10 将zip文件上传
+
+d）接着将上传至平台的插件加载到项目中即可，如图1-11所示：
+
+![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_0010_img.png)
+
+##### 图1-11 将插件加载到项目
