--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -123,3 +123,15 @@ d）接着将上传至平台的插件加载到项目中即可，如图1-11所示
 ![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_0010_img.png)
 
 ##### 图1-11 将插件加载到项目
+
+e）接着选择“配置组管理”模块，打开默认配置组` defaultGroup `页面，将` activityLog `配置项设置为
+
+`{"storageType":"customized","implClass":"实现类"}`
+
+其中实现类就是` classpath `地址
+
+`classpath="com.feisuanyz.flow.demo.plugin.activitylog.DemoActivityLog"`
+
+故具体配置如下：
+
+`{"storageType":"customized","implClass":"com.feisuanyz.flow.demo.plugin.activitylog.DemoActivityLog"}`
