--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/20. 组件流程日志/1. 组件流程日志.md
@@ -135,3 +135,13 @@ e）接着选择“配置组管理”模块，打开默认配置组` defaultGrou
 故具体配置如下：
 
 `{"storageType":"customized","implClass":"com.feisuanyz.flow.demo.plugin.activitylog.DemoActivityLog"}`
+
+##### 说明：若未找到activityLog配置项，您需要单击“同步”服务器activityLog配置项。.
+
+如图1-12所示：
+
+![1-12](hhttps://www.feisuanyz.com/fsimage/zc-image/cz_0012_img.png)
+
+##### 图1-12 配置组管理页面
+
+f）之后的步骤与本地文件存储器相同，您可以在自行配置的服务器地址获取` activityLog `日志文件。
