--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
@@ -1,1 +1,11 @@
-test
+### 1. 拦截器
+
+#### 1.1 新增拦截器模块
+
+本节主要介绍如何在项目中新增拦截器模块的具体操作过程。
+
+##### 1.1.1 操作步骤
+
+a）进入全自动开发平台功能模块界面，选择“拦截器”功能模块，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/ljq/1.png)
