--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
@@ -9,3 +9,15 @@
 a）进入全自动开发平台功能模块界面，选择“拦截器”功能模块，如图1-1所示：
 
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/ljq/1.png)
+
+##### 图1-1 选择拦截器功能
+
+b）单击“新增拦截器模块”，系统弹出新增拦截器模块页面，如图1-2、图1-3所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/ljq/2.png)
+
+##### 图1-2 单击新增拦截器模块
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/ljq/3.png)
+
+##### 图1-3 新增拦截器模块
