--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
@@ -47,3 +47,17 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）选中拦截器模块，单击添加按钮，选择“新增拦截器”，如图1-5所示：
 
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/ljq/5.png)
+
+##### 图1-5 新增拦截器
+
+b）填写拦截器的基本信息，执行类型选择接口前执行，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_02.png)
+
+##### 图1-6 选择接口前执行
+
+c）填写完成后，单击“提交”。
+
+d）单击“进入模型编辑”，根据需求绘制拦截器的流程图，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_04.png)
