--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
@@ -61,3 +61,17 @@ c）填写完成后，单击“提交”。
 d）单击“进入模型编辑”，根据需求绘制拦截器的流程图，如图1-7所示：
 
 ![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_04.png)
+
+##### 图1-7 绘制流程图
+
+##### 说明：
+
+此处我们简单以新增一条SQL记录作为示例。
+
+若想要拦截器程序运行结束后不执行接口操作，则需要在流程图中的输出结果配置` result `字段，` 1 `代表继续执行后续接口，` 0 `代表不执行后续接口。如无该字段，系统默认为` 1 `。
+
+e）绘制完成后，单击“保存并退出”
+
+f）单击“提交”
+
+g）单击“测试用例”，测试拦截器是否可以正常运行。
