--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
@@ -75,3 +75,19 @@ e）绘制完成后，单击“保存并退出”
 f）单击“提交”
 
 g）单击“测试用例”，测试拦截器是否可以正常运行。
+
+##### 说明：
+
+若无测试用例，则自行新增即可。
+
+h）测试用例成功后，继续对接口进行拦截器白名单设置。
+
+i）单击“接口管理”，单击“新增接口模块”旁边的三个点符号，选择“拦截器白名单设置”，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_05.png)
+
+##### 图1-8 选择拦截器白名单设置
+
+j）选择对应的拦截器，勾选对应的接口，单击“应用”即可，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_05.png)
