--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
@@ -105,3 +105,15 @@ b）填写拦截器的基本信息，执行类型选择接口后执行，如图1
 ##### 图1-10 选择接口后执行
 
 c）单击“下一步”。
+
+d）单击“选择输出结果”，选择输出结果项，如图1-11所示：
+
+![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_08.png)
+
+##### 图1-11 选择输出结果项
+
+##### 注意：此处选择的输出结果项必须与接口的输出结果组件选择的输出结果项一致。
+
+e）选择完成后，单击“确认”。
+
+f）单击“提交”。
