--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/21. 拦截器/1. 拦截器.md
@@ -117,3 +117,17 @@ d）单击“选择输出结果”，选择输出结果项，如图1-11所示：
 e）选择完成后，单击“确认”。
 
 f）单击“提交”。
+
+g）单击“进入模型编辑”，根据需求绘制拦截器的流程图，如图1-12所示：
+
+![1-12](https://www.feisuanyz.com/fsimage/zc-image/cz_23_1_04.png)
+
+##### 图1-12 绘制流程图
+
+##### 说明：此处我们简单以新增一条SQL记录作为示例，输出结果项可以任意选择。
+
+h）绘制完成后，单击“保存并退出”。
+
+i）单击“提交”。
+
+j）之后步骤与新增接口前执行拦截器步骤相同。
