--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
@@ -1,1 +1,11 @@
-test
+### 1. 初始化器
+
+#### 1.1 新增初始化器
+
+系统提供该功能，用户可以以画流程图的方式，新增一个初始化器，启动初始化器后，项目每次启动时，都会优先执行初始化器里面的流程。当有多个初始化器时，用户可以选择按顺序执行或者是异步执行初始化器。
+
+##### 前提条件
+
+a）您需要拥有“初始化器”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
