--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
@@ -9,3 +9,15 @@
 a）您需要拥有“初始化器”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.1.1 操作步骤
+
+a）单击“初始化器”，选择“新增初始化器”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_01.png)
+
+##### 图1-1 新增初始化器
+
+b）填写初始化器的基本信息，执行类型选择顺序执行或者异步执行，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_02.png)
