--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
@@ -31,3 +31,15 @@ c）设置初始化器的状态是启用/停用，单击“下一步”。
 d）单击“新增入口参数”，根据需求填写入参值，如图1-3所示：
 
 ![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_03.png)
+
+##### 图1-3 新增入口参数
+
+##### 说明：若不需要入口参数，也可以不用填写。
+
+e）单击“进入模型编辑”，根据需求绘制初始化的流程图。
+
+f）绘制完成后，单击“保存并退出”。
+
+g）单击“提交”。
+
+h）单击“执行初始化器”，如图1-4所示：
