--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/22. 初始化器/1. 初始化器.md
@@ -43,3 +43,9 @@ f）绘制完成后，单击“保存并退出”。
 g）单击“提交”。
 
 h）单击“执行初始化器”，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_24_1_04.png)
+
+##### 图1-4 执行初始化器
+
+##### 说明：若需要停止初始化器，将初始化器的状态设置为停用即可。
