--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -1,1 +1,9 @@
-test
+### 1. 流程编辑器
+
+#### 1.1 新增流程变量
+
+系统提供该功能，用户在编辑流程时，可以新增全局变量或局部变量，在使用其他组件时，可以直接选择该全局变量或局部变量的字段。
+
+##### 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
