--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -7,3 +7,13 @@
 ##### 前提条件
 
 a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.1.1 操作步骤
+
+a）进入流程编辑页面，单击“变量管理”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_25_1_01.png)
+
+##### 图1-1 流程编辑页面
