--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -17,3 +17,15 @@ a）进入流程编辑页面，单击“变量管理”，如图1-1所示：
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_25_1_01.png)
 
 ##### 图1-1 流程编辑页面
+
+b）选择“全局变量”或“局部变量”，单击“新增”，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_25_1_02.png)
+
+##### 图1-2 新增变量
+
+c）填写变量名称和描述，单击“新增”编辑该变量的字段，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_25_1_03.png)
+
+##### 图1-3 编辑变量的字段
