--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -43,3 +43,21 @@ d）编辑完成后，单击“提交”即可。
 流程图在保存时系统会自动进行校验，只允许一个开始节点且每个分支必须要有结束节点，不允许存在无头无尾的流程图，若出现不规范的地方，系统会弹出错误提示。
 
 ##### 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.2.1 操作步骤
+
+a）进行流程编辑器页面，拖拽赋值组件至画布，该赋值组件没有上一步的连接节点，单击“保存”，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_25_2_1.png)
+
+##### 图1-4 流程编辑页面
+
+b）系统弹出错误提示，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_25_2_2.png)
+
+##### 图1-5 错误提示
