--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -61,3 +61,21 @@ b）系统弹出错误提示，如图1-5所示：
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_25_2_2.png)
 
 ##### 图1-5 错误提示
+
+#### 1.3 流程图格式化
+
+系统提供该功能，流程编辑器中提供格式化选项，用户自定义完成流程图编辑之后，单击格式化，即可让流程图展示更加规范美观。本节将为您展示格式化功能的具体效果。
+
+##### 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 1.3.1 操作步骤
+
+a）进入接口的流程编辑器页面，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/geshihua_0.png)
+
+##### 图1-6 流程编辑页面
