--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -79,3 +79,21 @@ a）进入接口的流程编辑器页面，如图1-6所示：
 ![1-6](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/geshihua_0.png)
 
 ##### 图1-6 流程编辑页面
+
+b）绘制接口的流程图（格式化前），如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/geshihua_1.png)
+
+##### 图1-7 绘制流程图
+
+c）单击流程编辑器上方格式化选项，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/geshihua_3.png)
+
+##### 图1-8 点击格式化
+
+d）即可看到流程图格式化后的效果，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/geshihua_2.png)
+
+##### 图1-9 观看效果
