--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -97,3 +97,19 @@ d）即可看到流程图格式化后的效果，如图1-9所示：
 ![1-9](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/geshihua_2.png)
 
 ##### 图1-9 观看效果
+
+e）鼠标放置在格式化按钮上时，可选择撤回到上次格式化，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/geshihua_4.png)
+
+##### 图1-10 撤回上次格式化
+
+##### 需注意：流程图未保存时才可以撤回到上次格式化，已保存的流程图无法撤回。
+
+#### 1.4 流程图组件跨项目、页签复制粘贴
+
+流程图中的组件支持跨项目、页签进行复制粘贴，但如果当前项目没有加载相应的组件，则无法粘贴。
+
+##### 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
