--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/23. 流程编辑器/1. 流程编辑器.md
@@ -127,3 +127,15 @@ a）在流程图页面，选中要复制的组件，点击复制，如图1-11所
 b）打开要粘贴的流程图页面（当前接口/其它接口/其它项目的接口），点击粘贴，移动鼠标即复制完成，如图1-12所示：
 
 ![1-12](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/zujiancopy_2.png)
+
+##### 图1-12 粘贴组件
+
+##### 说明：复制过来的组件里的数据也会一同粘贴过来。
+
+c）当要粘贴的接口所在项目未加载对应组件时，系统会弹出如图1-13所示的提示：
+
+![1-13](https://www.feisuanyz.com/fsimage/zc-image/liuchengbianji/zujiancopy_3.png)
+
+##### 图1-13 系统提示
+
+d）去项目加载项加载对应的组件再进行粘贴即可。
