--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/24. 变量字段类型/1. 变量字段类型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/24. 变量字段类型/1. 变量字段类型.md
@@ -1,1 +1,13 @@
-test
+### 1. 变量字段类型
+
+#### 1.1 新增变量字段类型模块
+
+本节主要介绍如何在项目中新增变量字段类型模块的具体操作过程。
+
+##### 1.1.1 操作步骤
+
+a）进入全自动开发平台功能模块界面，选择“变量字段类型”功能模块，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/1.png)
+
+##### 图1-1 选择功能模块
