--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/24. 变量字段类型/1. 变量字段类型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/24. 变量字段类型/1. 变量字段类型.md
@@ -41,3 +41,14 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 1.2.1 操作步骤
 
 a）首先用户需要在java编译器中编写好自定义程序，并打包成jar包。
+
+b）单击平台菜单栏的“扩展Jar包”选项，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/2.png)
+
+##### 图1-5 扩展Jar包页面
+
+C）单击“导入”导入Jar包，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_26_1_02.png)
+
