--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/24. 变量字段类型/1. 变量字段类型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/24. 变量字段类型/1. 变量字段类型.md
@@ -52,3 +52,10 @@ C）单击“导入”导入Jar包，如图1-6所示：
 
 ![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_26_1_02.png)
 
+##### 图1-6 导入Jar包
+
+d）Jar包导入完成后，进入“变量字段类型”功能，选中变量字段类型模块，单击添加按钮，选择“新增变量字段类型”，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/blzdlx/5.png)
+
+##### 图1-7 变量字段类型模块
