--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/25. 接口生成器/1. 接口生成器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/25. 接口生成器/1. 接口生成器.md
@@ -11,3 +11,13 @@ a）您已经成功连接数据库。
 b）您已经成功连接中间件资源。
 
 ##### 1.1.1 操作步骤
+
+a）在平台功能模块界面中，选择“接口生成器”功能模块，系统显示“接口生成器”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_13-00_img.png)
+
+##### 图1-1 选择接口生成器
+
+b）选中数据库，如图1-2所示，单击“下一步”：
+
+![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_13-01_img.png)
