--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/25. 接口生成器/1. 接口生成器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/25. 接口生成器/1. 接口生成器.md
@@ -45,3 +45,17 @@ f）选择“SQL管理”功能模块，进入对应的SQL组和SQL模块查看S
 ##### 图1-5 SQL信息自动生成
 
 #### 1.2 自动生成实体模型
+
+本节主要介绍利用接口生成器自动生成实体模型的具体操作方法。
+
+##### 前提条件
+
+a）您需要先创建好实体模型模块，关于如何创建实体模型具体请参见[《第12章 实体模型：1.1 新增实体模型模块》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/1.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97)。
+
+##### 1.2.1 操作步骤
+
+a）在平台功能模块页面，选择“接口生成器”功能模块，系统显示“接口生成器”页面，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/czzn_13_2_3_1.png)
+
+##### 图1-6 选择接口生成器
