--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
@@ -1,1 +1,9 @@
-test
+### 1. 微服务治理
+
+#### 1.1 通过Nacos修改配置信息
+
+全自动开发平台支持对接Nacos，用户可以在自行搭建好Nacos后，通过新建bootstrap.yml文件即可实现在Nacos上修改已部署项目的相关资源实例及配置组的配置信息，无需重新部署项目。
+
+##### 1.1.1 操作步骤
+
+a）在项目jar包同级目录下新建如下所示的bootstrap.yml文件，将enabled设置为true，打开Nacos的配置开关；同时需保证yml文件中的地址与Nacos配置资源实例中填写的地址一致，保存该yml文件即可，如图1-1所示：
