--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
@@ -7,3 +7,13 @@
 ##### 1.1.1 操作步骤
 
 a）在项目jar包同级目录下新建如下所示的bootstrap.yml文件，将enabled设置为true，打开Nacos的配置开关；同时需保证yml文件中的地址与Nacos配置资源实例中填写的地址一致，保存该yml文件即可，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_4.png)
+
+##### 图1-1 新建bootstrap.yml文件
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_5.png)
+
+##### 图1-2 将enabled设置为true
+
+图1-2所示具体代码如下：
