--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
@@ -17,3 +17,19 @@ a）在项目jar包同级目录下新建如下所示的bootstrap.yml文件，将
 ##### 图1-2 将enabled设置为true
 
 图1-2所示具体代码如下：
+
+```
+spring:
+  cloud:
+    nacos:
+      config:
+        enabled: true
+        server-addr: ${NACOS_HOST:127.0.0.1}:${NACOS_PORT:8080}
+      discovery:
+        enabled: true
+        server-addr: ${NACOS_HOST:127.0.0.1}:${NACOS_PORT:8080}
+```
+
+b）启动项目后，在浏览器中输入Nacos地址（即Nacos配置资源实例中填写的地址），登录Nacos服务进入Nacos页面；在服务列表中输入服务名称（即部署项目的项目路径）进行查询，若能查询出来，则说明配置成功，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_6.png)
