--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
@@ -33,3 +33,15 @@ spring:
 b）启动项目后，在浏览器中输入Nacos地址（即Nacos配置资源实例中填写的地址），登录Nacos服务进入Nacos页面；在服务列表中输入服务名称（即部署项目的项目路径）进行查询，若能查询出来，则说明配置成功，如图1-3所示：
 
 ![1-3](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_6.png)
+
+##### 图1-3 输入服务名称
+
+c）选择Nacos页面中的配置管理，单击配置列表，输入项目的Group（即部署项目包的环境路径，部署环境-项目路径）进行查询，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_7.png)
+
+##### 图1-4 输入项目Group
+
+d）查询出当前项目的所有资源实例或配置组的信息后，用户可根据需求进行修改。例：编写defaultGroup数据，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_8.png)
