--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
@@ -45,3 +45,13 @@ c）选择Nacos页面中的配置管理，单击配置列表，输入项目的Gr
 d）查询出当前项目的所有资源实例或配置组的信息后，用户可根据需求进行修改。例：编写defaultGroup数据，如图1-5所示：
 
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_8.png)
+
+##### 图1-5 编写defaultGroup数据
+
+e）修改对应配置内容，点击发布，然后重启服务即可生效，无需重新部署版本，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_9.png)
+
+##### 图1-6 配置内容
+
+#### 1.2 使用FeignCient组件进行微服务调用
