--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
@@ -95,3 +95,13 @@ b）输入Nacos部署的IP地址加端口即可，如图1-3所示：
 a）新增Http通信资源实例，填写调用接口所在项目的项目路径地址，如图1-4所示：
 
 ##### 说明：若通过HTTP组件调用该资源实例，则填写IP地址。
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_11.png)
+
+##### 图1-4 填写路径地址
+
+##### 1.2.3 操作步骤：接口编辑
+
+a）进入接口的流程编辑器中，选择FeignClient组件，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_12.png)
