--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/26. 微服务治理/1. 微服务治理.md
@@ -105,3 +105,13 @@ a）新增Http通信资源实例，填写调用接口所在项目的项目路径
 a）进入接口的流程编辑器中，选择FeignClient组件，如图1-5所示：
 
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_12.png)
+
+##### 图1-5 选择FeignClient组件
+
+b）选中FeignClient组件，Nacos资源实例名称处选择新增的Nacos配置资源实例，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_13.png)
+
+##### 图1-6 选择新增的Nacos配置资源实例
+
+c）配置HTTP的请求参数，HTTP的资源名称处选择新增的Http通信资源实例，剩下信息根据所需调用的接口来填写即可，如图1-7所示：
