--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
@@ -1,1 +1,9 @@
-test
+### 1. TCP模型管理
+
+#### 1.1 新增TCP模型接口
+
+全自动开发平台支持TCP协议，用户可以在TCP模型管理页面创建TCP模型接口。本节为您具体介绍如何新增TCP模型接口。
+
+##### 1.1.1 操作步骤
+
+a）进入全自动开发平台，选择对应项目进入功能模块界面。
