--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
@@ -7,3 +7,13 @@
 ##### 1.1.1 操作步骤
 
 a）进入全自动开发平台，选择对应项目进入功能模块界面。
+
+b）单击“TCP模型管理 > 新增TCP模型”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_1.png)
+
+##### 图1-1 新增TCP模型
+
+c）配置TCP模型的基本信息，填写完成后单击“下一步”，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_2.png)
