--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版基础操作教程/27. TCP模型管理/1. TCP模型管理.md
@@ -17,3 +17,11 @@ b）单击“TCP模型管理 > 新增TCP模型”，如图1-1所示：
 c）配置TCP模型的基本信息，填写完成后单击“下一步”，如图1-2所示：
 
 ![1-2](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_2.png)
+
+##### 图1-2 填写TCP模型基本信息
+
+##### 注意：同租户下，所有的TCP模型接口与端口号一一对应，不可重复，否则系统将提示端口已被其他服务占用，无法提交接口。
+
+d）根据实际需求配置入口参数，单击“提交”，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_3.png)
